# pyfacturx

./: .gitignore  CHANGELOG.md  README.md  messages.pot  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test-and-lint.yml
src/facturx/: __init__.py  _locale.py  const.py  countries.py  exc.py  format.py  generate.py  model.py  money.py  parse.py  pdf_extract.py  pdf_parse.py  quantities.py  test_generate.py  test_money.py  test_parse.py  type_codes.py  types.py
src/facturx/locale/de/LC_MESSAGES/: pyfactur-x.po
src/facturx/test_data/: README.md  __init__.py
