[tool.poetry]
name = "facturx"
version = "0.1.0"
description = "Factur-X/ZUGFeRD parsing and generation library for Python"
authors = ["Sebastian Rittau <sebastian.rittau@zfutura.de>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/zfutura/pyfacturx"
keywords = ["factur-x", "zugferd", "invoice", "billing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: File Formats",
    "Topic :: Office/Business :: Financial :: Accounting",
]
include = [{ path = "src/facturx/locale/**/*.mo", format = ["wheel"] }]
exclude = ["src/facturx/test_*"]

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^5.3.0"

[tool.poetry.group.dev.dependencies]
babel = "~=2.17.0"
mypy = "~=1.15.0"
poethepoet = "^0.32.2"
pytest = "^8.3.4"
ruff = "^0.9.9"

[tool.poe.tasks]
i18n-extract = "pybabel extract -o messages.pot src"
i18n-init = "pybabel init -D pyfactur-x -i messages.pot -d src/facturx/locale -l "
i18n-update = "pybabel update -D pyfactur-x -i messages.pot -d src/facturx/locale"
i18n-compile = "pybabel compile -D pyfactur-x -d src/facturx/locale"
lint = "ruff check src"
test = "pytest src"
typecheck = "mypy src"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
